; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_floppy.c_format_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_floppy.c_format_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)*, i32 (i32)*, i32 (...)* }

@cont = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @format_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_interrupt() #0 {
  %1 = call i32 (...) @interpret_errors()
  switch i32 %1, label %13 [
    i32 1, label %2
    i32 2, label %7
    i32 0, label %8
  ]

2:                                                ; preds = %0
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cont, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 2
  %5 = load i32 (...)*, i32 (...)** %4, align 8
  %6 = call i32 (...) %5()
  br label %7

7:                                                ; preds = %0, %2
  br label %13

8:                                                ; preds = %0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cont, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32 (i32)*, i32 (i32)** %10, align 8
  %12 = call i32 %11(i32 1)
  br label %13

13:                                               ; preds = %8, %0, %7
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cont, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (...)*, i32 (...)** %15, align 8
  %17 = call i32 (...) %16()
  ret void
}

declare dso_local i32 @interpret_errors(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
